--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" >MAGIC</a>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#icon">
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+      </button>
     </div>
+    <div class="collapse navbar-collapse" id="icon" >
     <ul class="nav navbar-nav">
       <li ><a href="#">Home</a></li>
         <li ><a href="#">Contact</a></li>
         <li ><a href="#">Help</a></li>
     </ul>
-      <form class="navbar-form navbar-left" action="/action_page.php">
+      <form class="navbar-form navbar-left" action="">
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Search">
       </div>
@@ -29,6 +35,7 @@
       <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
+  </div>
   </div>
 </nav>
     <div class="container">
